--- a/css/options.css
+++ b/css/options.css
@@ -1,6 +1,6 @@
 .DotaTooltipOptions {
   overflow: hidden;
-  height: 26em;
+  height: 25em;
 }
 
 div, a, p, h1, h2, h3, h4, h5, h6 {
@@ -16,7 +16,7 @@ h1 {
 
 h4, p {
   display: inline-block;
-  margin: 1em 0.5em 0.4em 0;
+  margin: 1em 0.5em 0.2em 0;
 }
 
 a {
@@ -62,6 +62,19 @@ input[type=number]::-webkit-outer-spin-button {
   margin-left: auto;
   margin-right: auto;
   width: 90%;
+}
+
+.KeywordSpecificityInfo {
+  position: relative;
+  padding: 0px 5px 2px 5px;
+  bottom: 2px;
+  border-radius: 5px;
+
+  color: #888;
+  background: #EEE;
+  opacity: 0;
+  transition-property: opacity;
+  transition-duration: 0.3s;
 }
 
 .DevMode {
