finished porting for use in firefox. lots of little tweaks needed, but it now runs nearly identically on both chrome and firefox.

--- a/dev/css/style_custom.css
+++ b/dev/css/style_custom.css
@@ -147,7 +147,12 @@
 .DotaTooltip .abilityIcon {
 	float:left;
 	height: 4.666em;
+  overflow: hidden;
   margin-right: 1.5em;
+}
+.DotaTooltip .abilityIcon img {
+	height: 100% !important;
+  width: auto !important;
 }
 /* ABILITY: name */
 .DotaTooltip .abilityName {
