--- a/dev/css/options.css
+++ b/dev/css/options.css
@@ -1,6 +1,21 @@
 .DotaTooltipOptions {
+  font-family: "Segoe UI", Tahoma, sans-serif;
+
   overflow: hidden;
   height: 25em;
+  max-width: 20em;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type=range] {
+  height: 2em;
 }
 
 div, a, p, h1, h2, h3, h4, h5, h6 {
@@ -8,26 +23,21 @@ div, a, p, h1, h2, h3, h4, h5, h6 {
   margin: 0.2em 0; padding: 0; border: 0;
   line-height: 1.2em;
 }
-
 h1 {
   display: inline;
   font-weight: bold;
 }
-
 h4, p {
   display: inline-block;
-  margin: 1em 0.5em 0.2em 0;
+  margin: 0.6em 0.5em 0.2em 0;
 }
-
 a {
   font-weight: bold;
   text-decoration: none;
 }
-
 a:hover {
   color: #68F;
 }
-
 
 .BaseFontSizeWrapper {
   display: flex;
@@ -36,11 +46,10 @@ a:hover {
   width: 90%;
 }
 .BaseFontSizeWrapper > input[type=range] {
-  flex: 1 1 auto;
+  flex: 1 1 100%;
   width: 100%;
 }
 .BaseFontSizeWrapper > input[type=number] {
-  flex: 0 0 3em;
   width: 3em;
   text-align: center;
   margin: 0 0.5em;
@@ -48,13 +57,8 @@ a:hover {
   background: #EEE;
 }
 .BaseFontSizeWrapper > span {
-  flex: 0 0 1.5em;
-  margin: 0.3em 0 0 0;
-}
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+  width: 1.5em;
+  margin: 0.5em 0 0 0;
 }
 
 .KeywordSpecificity {
@@ -63,7 +67,6 @@ input[type=number]::-webkit-outer-spin-button {
   margin-right: auto;
   width: 90%;
 }
-
 .KeywordSpecificityInfo {
   position: relative;
   padding: 0px 5px 2px 5px;
@@ -88,7 +91,6 @@ input[type=number]::-webkit-outer-spin-button {
   transition-duration: 1s;
   transition-delay: 10s;
 }
-
 .DevMode:hover {
   opacity: 1;
 }
