--- a/dev/css/style_custom.css
+++ b/dev/css/style_custom.css
@@ -170,7 +170,7 @@
 	height: 0.166em;
 	width: 100%;
 	margin: 0.6em 0;
-	background: url( 'http://cdn.dota2.com/apps/dota2/images/tooltips/abil_hr_1.png' ) repeat-x;
+	background: url( 'https://cdn.steamstatic.com/apps/dota2/images/tooltips/abil_hr_1.png' ) repeat-x;
   background-color: #282828;
 }
 /* ABILITY: targetting */
