--- a/dev/css/style_custom.css
+++ b/dev/css/style_custom.css
@@ -29,6 +29,8 @@
   background: -moz-linear-gradient(top, #2e2e2d, #000000);
   background: linear-gradient(top, #2e2e2d, #000000);
   transition: visibility 0.2s, opacity 0.2s linear;
+
+  box-shadow: 0em 0.15em 1.2em rgba(0, 0, 0, 0.4);
 }
 .DotaTooltip br + br {
   display: block;
@@ -140,6 +142,9 @@
 	height: 2em;
   line-height: 2em;
 }
+.DotaTooltip_item .cooldownMana img {
+  border-radius: 0.35em;
+}
 /* ITEM: lore */
 .DotaTooltip .lore {
 	clear:right;
@@ -174,7 +179,7 @@
 /* ABILITY: lines around targetting */
 .DotaTooltip .abilityHR1, .DotaTooltip .abilityHR2 {
 	background-repeat:no-repeat;
-	height: 0.166em;
+	height: 0.2em;
 	width: 100%;
 	margin: 0.6em 0;
 	/* background: url( 'https://cdn.steamstatic.com/apps/dota2/images/tooltips/abil_hr_1.png' ) repeat-x; */
@@ -233,9 +238,11 @@
 	font-weight:normal;
 }
 .DotaTooltip .manaImg, .DotaTooltip .cooldownImg {
-	margin:0 0.5em 0 0;
 	display:block;
+  height: 1.8em;
+	margin:0 0.5em 0 0;
 	float:left;
+  border-radius: 0.25em;
 }
 .DotaTooltip .cooldown {
   width: 50%;
